kubectl/guestbook_app/ing-guestbook.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: guestbook.iaclab.com.br
      http:
        paths:
        - backend:
            serviceName: frontend
            servicePort: 80
